--- a/Front-end/inscrit.html
+++ b/Front-end/inscrit.html
@@ -102,7 +102,7 @@
           margin: 0;
           cursor: pointer;
         }   
-        #email{
+        #email1{
              margin-right: 366px;
              font-size: 20px;
         }
@@ -110,7 +110,7 @@
             font-size: 20px;
             margin-right: 243px;
         }
-        #name{
+        #name1{
             font-size: 20px;
             margin-right: 366px;
         }
@@ -140,11 +140,11 @@
         <div class="connecter">
             <form id="registerForm" action="/register" method="POST">
                 <div >
-                    <label id="name" for="">Nom</label>
+                    <label id="name1" for="">Nom</label>
                     <input id="name" type="text" name="name" placeholder="Entrez votre nom">
                 </div>
                 <div >
-                    <label id="email" for="">Email</label>
+                    <label id="email1" for="">Email</label>
                     <input type="email" name="email" id="email" placeholder="Entrez votre email" required />
                 </div>
                 <div >
@@ -162,7 +162,7 @@
             </form>
         </div>
     </div>
-    <script src="main.js"></script>                                                                
+    <script src="main.js" defer></script>                                                                
 
     <script>
         document.getElementById("Afficher").addEventListener("change", function () {
