--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -133,7 +133,7 @@
     <div class="login">
         <h1>Connexion</h1>
         <div class="connecter">
-            <form id="loginForm" action="/login" method="POST">
+            <form id="loginForm" >
                 <div class="email">
                     <label id="email" for="">Email</label>
                     <input type="email" id="loginEmail" name="email" placeholder="Entrez votre email" required />
@@ -149,11 +149,11 @@
                 <button type="submit">Se connecter</button>     
             </form>
             <button class="butt">
-                <a href="/inscrit">Créer un compte</a>
+                <a href="inscrit.html">Créer un compte</a>
             </button>
         </div>
     </div>
-    <script src="connex.js" defer></script>
+    <script src="./connex.js" ></script>
     <script>
         document.getElementById("Afficher").addEventListener("change", function () {
     let passwordField = document.getElementById("password");
