--- a/Front-end/secure.html
+++ b/Front-end/secure.html
@@ -100,26 +100,41 @@
 <body>
   <div class="container">
     <h1>Bienvenue sur la page sécurisée !</h1>
-    <h2 id="user-name">Chargement...</h2> <!-- Zone pour afficher le nom -->
-    <button onclick="window.location.href='/logout'">Déconnecter</button>
+    <h2 id="name">Chargement...</h2>
+    <p id="email"></p>
+    <button id="button">Déconnecter</button>
   </div>
 
   <script>
-    fetch("/user")
-      .then(response => response.json())
-      .then(data => {
-        if (data.name) {
-          document.getElementById("user-name").textContent = "Bonjour, " + data.name + " !";
-        } else {
-          document.getElementById("user-name").textContent = "Utilisateur inconnu";
-        }
-      })
-      .catch(error => console.error("Erreur :", error));
+   const session = localStorage.getItem("session");
+if (!session) {
+  window.location.href = "index.html";
+} else {
+  fetch("http://localhost:5000/api/user", {
+    method: "GET",
+    headers: {
+      "Authorization": `Bearer ${session}`
+    }
+  })
+  .then(response => response.json())
+  .then(data => {
+    // Vérification si les données contiennent les informations de l'utilisateur
+    console.log(data);  // Ajoutez cette ligne pour vérifier ce que vous obtenez
+    document.getElementById("name").textContent = `Bonjour, ${data.name} !`;
+    document.getElementById("email").textContent = `Email : ${data.email}`;
+  })
+  .catch(error => {
+    console.error("Erreur lors de la récupération des données utilisateur", error);
+  });
+}
 
-
-// Mettre à jour l'interface utilisateur au chargement de la page
-updateUserInfo();
-
+  
+    document.getElementById("button").addEventListener("click", () => {
+      localStorage.removeItem("session");
+      window.location.href = "index.html"; // Redirige après déconnexion
+    });
   </script>
+  
+
 </body>
 </html>
