--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -132,6 +132,7 @@
 <body>
     <div class="login">
         <h1>Connexion</h1>
+        <p id="error-message" style="color: red; display: none;">Email ou mot de passe incorrect</p>
         <div class="connecter">
             <form id="loginForm" >
                 <div class="email">
