--- a/Front-end/inscrit.html
+++ b/Front-end/inscrit.html
@@ -136,6 +136,7 @@
     <div class="login">
         <div>
             <h1>Inscription</h1>
+            <div id="error-message" style="color: red; display: none;"></div>
         </div>
         <div class="connecter">
             <form id="registerForm" action="/register" method="POST">
