--- a/Front-end/inscrit.html
+++ b/Front-end/inscrit.html
@@ -154,7 +154,7 @@
                 </div>       
                 <div class="motsdepass">
                     <input type="checkbox" id="Afficher">
-                    <p>Afficher le mots passe</p>
+                    <p>Afficher le mots de passe</p>
                 </div> 
                 <button type="submit">S'inscrire</button>
                 <button class="butt">
