--- a/Front-end/inscription.html
+++ b/Front-end/inscription.html
@@ -36,7 +36,7 @@
                 </div> 
                 <button type="submit">S'inscrire</button>
                 <button class="butt">
-                    <a href="/">Se connecter</a>
+                    <a href="connexion.html">Se connecter</a>
                 </button>
             </form>
         </div>
