--- a/Front-end/connexion.html
+++ b/Front-end/connexion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="connexion.css">
+    <link rel="stylesheet" href="./public/connexion.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -32,9 +32,11 @@
             <button class="butt">
                 <a href="inscription.html">Créer un compte</a>
             </button>
+            <p><a href="password.html">Mots de passe oublié ?</a></p>
+
         </div>
     </div>
-    <script src="connexion.js" ></script>
+    <script src="./javascript/connexion.js" ></script>
 </body>
 
 </html>
