--- a/Front-end/secure.html
+++ b/Front-end/secure.html
@@ -16,6 +16,7 @@
     <h2 id="name">Chargement...</h2>
     <p id="email"></p>
     <button id="button">Déconnecter</button>
+    <a href="change-passwords.html">modifier votre mots de passe</a>
   </div>
 <script src="./javascript/secure.js"></script>
 
