--- a/Front-end/connexion.html
+++ b/Front-end/connexion.html
@@ -32,7 +32,7 @@
             <button class="butt">
                 <a href="inscription.html">Créer un compte</a>
             </button>
-            <p><a href="password.html">Mots de passe oublié ?</a></p>
+            <p><a href="verify-email.html">Mots de passe oublié ?</a></p>
 
         </div>
     </div>
