--- a/Front-end/verify-email.html
+++ b/Front-end/verify-email.html
@@ -19,6 +19,6 @@
         <button type="submit">Envoyer</button>
     </form>
 
-    <script src="./javascript/password.js"></script>
+    <script src="./javascript/verify-email.js"></script>
 </body>
 </html>
